<resources>
    <string name="app_name">어서와, 서울로</string>
    <string name="text_home">Home</string>
    <string name="text_route">Route</string>
    <string name="text_AR">AR</string>
    <string name="text_facility">Facility</string>
    <string name="text_settings">Settings</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="alertTmapInstall">T map 설치가 필요합니다.</string>
    <string name="install">설치하기</string>
    <string name="no">아니오</string>


    <string name="title_activity_photo_editor">PhotoEditorActivity</string>
    <string name="done">Done</string>
    <string name="save">Save</string>
    <string name="clear_all">Clear All</string>
    <string name="camera">Camera</string>
    <string name="gallery">Gallery</string>
    <string name="upload_dialog_title">Upload Image</string>
    <string name="upload_picker_title">Select Picture</string>
    <string name="directory_create_fail">Failed to create directory</string>
    <string name="access_media_permissions_msg">To attach photos, we need to access media on your device</string>
    <string name="continue_txt">Continue</string>
    <string name="not_now">NOT NOW</string>
    <string name="media_access_denied_msg">You denied storage access, no photos will be added.</string>

    <string name="ic_close">"\ue918"</string>
    <string name="ic_text">"\ue945"</string>
    <string name="ic_draw">""\ue944</string>
    <string name="ic_images">"\ue949"</string>
    <string name="ic_save">"\ue946"</string>
    <string name="ic_clear_all">"\ue947"</string>
    <string name="ic_continue">"\ue948"</string>
    <string name="ic_delete">"\ue92c"</string>
    <string name="choose_from_gallery">Choose From Gallery</string>
    <string name="choose_from_camera">Choose From Camera</string>
    <string name="undo">Undo</string>
    <string name="erase">Erase</string>
</resources>
