<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true">

    <TextView
        android:id="@+id/text_home"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:text="@string/text_home" />

    <TextView
        android:id="@+id/text_route"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:text="@string/text_route"
        android:visibility="gone"/>

    <TextView
        android:id="@+id/text_AR"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:text="@string/text_AR"
        android:visibility="gone"/>

    <TextView
        android:id="@+id/text_facility"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:text="@string/text_facility"
        android:visibility="gone"/>

    <TextView
        android:id="@+id/text_settings"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:text="@string/text_settings"
        android:visibility="gone"/>



    <android.support.design.widget.BottomNavigationView
        android:id="@+id/bottom_navigation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_gravity="bottom"
        app:itemBackground="@color/colorPrimary"
        app:itemIconTint="@color/white"
        app:itemTextColor="@color/white"
        app:menu="@menu/bottom_navigation_main" />

    <!--<android.support.v4.view.ViewPager-->
        <!--android:id="@+id/container"-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="match_parent"-->
        <!--app:layout_behavior="@string/appbar_scrolling_view_behavior" />-->

    <!--<android.support.design.widget.BottomNavigationView-->
        <!--android:id="@+id/bottom_navigation"-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="wrap_content"-->
        <!--app:itemBackground="@color/colorPrimary"-->
        <!--app:itemIconTint="@color/white"-->
        <!--app:itemTextColor="@color/white"-->
        <!--app:layout_anchor="@id/container"-->
        <!--app:layout_anchorGravity="bottom"-->
        <!--app:menu="@menu/bottom_navigation_main" />-->

</android.support.design.widget.CoordinatorLayout>
